# CPL-20192-Team3

./: .gitignore  OpenCV_ubuntu_jyw.odt  README.md
KNU_maker_detection_gif_makerton/: cmake_install.cmake  imgui.ini  output.txt  readMe.md
KNU_maker_detection_gif_makerton/shader/: grid.fs  grid.vs  sample.fragment  sample.vertex
KNU_maker_detection_gif_makerton/src/: knuCamera.cpp  knuCamera.h  knuGlModel.h  main.cpp
KnuMarkerViewer/: CMakeLists.txt
KnuMarkerViewer/shader/: 1.model_loading.vs
KnuMarkerViewer/src/: knuCamera.cpp  knuCamera.h  knuEntity.cpp  knuEntity.h  knuGlModel.cpp  knuGlModel.h  main.cpp
OpenCV_jyw/maker_triangle_jyw/calibration/: output.txt
OpenCV_jyw/maker_triangle_jyw/marker/: create_marker
OpenCV_jyw/maker_triangle_jyw/opengl_drawtriangle/: test.cpp
calibration/: README.md  calibrate.cpp
opecCV 활용/OpenCV_jyw/maker_triangle_jyw/calibration/: calibrate  createboard
opecCV 활용/OpenCV_jyw/maker_triangle_jyw/detection/: detectmarker  문제점.txt
opecCV 활용/OpenCV_jyw/maker_triangle_jyw/marker/: README.md
opecCV 활용/OpenCV_jyw/maker_triangle_jyw/opengl_drawtriangle/: test
opecCV 활용/openCV활용/: ubuntu openCV설치.md
openCV활용/: opencv_cam.cpp  ubuntu openCV설치.md
openCV활용_window/: openCV_소스.cpp  window_openCV설치.md
